Add cart + line_item

--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -18,6 +18,7 @@
         <td><%= dish.name %></td>
         <td><%= dish.price %></td>
         <td><%= dish.description %></td>
+        <td><%= button_to 'Add to Cart', line_items_path(dish_id: dish) %></td>
         <td><%= link_to 'Show', dish %></td>
         <td><%= link_to 'Edit', edit_dish_path(dish) %></td>
         <td><%= link_to 'Destroy', dish, method: :delete, data: { confirm: 'Are you sure?' } %></td>
