--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,23 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+.place-wrapper {
+  padding-top: 40px;
+  margin: 0 auto;
+  max-width: 642px;
+  width: 100%;
+}
+
+.place-header {
+  padding: 20px 0;
+  margin-top: 120px;
+}
+
+.place-name {
+  display: inline;
+}
+
+.place-desc {
+  margin-top: 20px;
+}
