--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
 
   <body>
   <%= render 'layouts/navbar' %>
-  <p><%= notice %></p>
-  <p><%= alert %></p>
+  <div class="container">
+    <p><%= notice %></p>
+    <p><%= alert %></p>
 
-    <%= yield %>
+      <%= yield %>
+  </div>
   </body>
 </html>
