--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,5 +1,5 @@
-<tr data-id="<%= line_item.id %>">
-  <td><%= link_to 'x', line_item, method: 'delete', remote: true %></td>
+<tr>
+  <td><%= link_to 'x', line_item, method: 'delete' %></td>
   <td><%= line_item.quantity %>&times;</td>
   <td><%= line_item.dish.name %></td>
   <td> from <%= line_item.dish.place.name %></td>
