--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<%= "You dont't have any orders yet" if @orders.first == nil %>
+<div class="row">
+  <% @orders.each do |order| %>
+      <div class="col-sm-6 col-md-6 col-md-offset-3">
+        <div class="thumbnail">
+        <% order.order_items.each do |item| %>
+              <%= item.name %> <%= item.price %> x <%= item.quantity %> <%= item.total_price %>
+          <div class="caption">
+            <h3 class="place-name">
+            </h3>
+            <p class="place-desc">
+            </p>
+          </div>
+          <% end %>
+          <p>Total Price: <%= order.total_price %></p>
+          <p>Place: <%= link_to order.place.name, place_path(order.place) %></p>
+        </div>
+      </div>
+  <% end %>
+</div>
