--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,44 +1,43 @@
-<p>
-  <strong>Name:</strong>
-  <%= @place.name %>
-</p>
+<div class="row">
+  <div class="col-md-9">
+      <div class="thumbnail">
+        <%= image_tag @place.image.url(:medium), class: "img-circle" %>
+        <div class="caption">
+          <h3 class="place-name">
+            <%= link_to @place.name, @place %>
+          </h3>
+          <p class="place-desc">
+            <%= @place.description %>
+          </p>
+        </div>
+      </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @place.description %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <%= @place.image %>
-</p>
-
-<h1>Dishes</h1>
-
-<table>
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Price</th>
-    <th>Description</th>
-    <th colspan="1"></th>
-  </tr>
-  </thead>
-
-  <tbody>
   <% @place.dishes.each do |dish| %>
-      <tr>
-        <td><%= dish.name %></td>
-        <td><%= dish.price %></td>
-        <td><%= dish.description %></td>
-        <td><%= button_to 'Add to Cart', line_items_path(dish_id: dish) %></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
+      <div class="thumbnail">
+        <%= dish.name %>
+        <div class="caption">
+          <h3 class="place-name">
+            <%= dish.price %>
+          </h3>
+          <p class="place-desc">
+            <%= dish.description %>
+          </p>
+          <%= button_to 'Add to Cart', line_items_path(dish_id: dish) %>
+        </div>
+      </div>
 
+  <% end %>
+
+
+  </div>
+
+
+  <div class="col-md-3">
 <div id="side">
   <div id="cart">
-    <%= render @cart, place: @place %>
+    <%= user_signed_in? ? (render @cart, place: @place) : 'Log in before order' %>
   </div>
+</div>
+    </div>
+
 </div>
