--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,13 +1,13 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name, required: true %>
-    <%= f.input :address, required: true %>
-    <%= f.input :phone, required: true %>
-    <%= f.input :email, required: true, autofocus: true %>
+  <div class="form-group">
+    <%= f.input :name, class: "form-control", required: true %>
+    <%= f.input :address, required: true, class: "form-control" %>
+    <%= f.input :phone, required: true, class: "form-control" %>
+    <%= f.input :email, required: true, autofocus: true, class: "form-control" %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -18,7 +18,7 @@
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-group">
     <%= f.button :submit, "Update" %>
   </div>
 <% end %>
