--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <% @places.each do |place| %>
-  <div class="col-sm-6 col-md-6">
+  <div class="col-sm-6 col-md-6 col-md-offset-3">
     <div class="thumbnail">
       <%= image_tag place.image.url(:medium), class: "img-circle" %>
     <div class="caption">
