--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <% @orders.each do |order| %>
       <div class="col-sm-6 col-md-6 col-md-offset-3">
-        <div class="thumbnail">
+        <div class="thumbnail" id="order_<%= "#{order.id}" %>">
         <% order.order_items.each do |item| %>
               <%= item.name %> <%= item.price %> x <%= item.quantity %> <%= item.total_price %>
           <div class="caption">
